--- a/labs/lab_2/assignment2_template.qmd
+++ b/labs/lab_2/assignment2_template.qmd
@@ -331,20 +331,58 @@ county_map <- pa_counties_proj %>%
   left_join(county_summary %>% select(COUNTY_NAM, pct_underserved_vulnerable),
             by = c("COUNTY_NAM" = "COUNTY_NAM"))
 
-ggplot(county_map) +
-  geom_sf(aes(fill = pct_underserved_vulnerable), color = "white", size = 0.5) +
+ggplot() +
+  # Counties filled by % underserved vulnerable tracts
+  geom_sf(data = county_map, aes(fill = pct_underserved_vulnerable), 
+          color = "white", size = 0.3) +
+  
+  # Color scale for underserved percentage
   scale_fill_viridis_c(
     name = "Percent Underserved",
-    option = "magma",
-    # Format to show percent sign on color bar.
+    option = "viridis",  
+    direction = -1,
     labels = function(x) paste0(x, "%")
   ) +
+  
+  # Map titles and caption
   labs(
-    title = "Most Underserved Counties",
-    subtitle = "Pennsylvania, United States",
-    caption = "Source: ACS 2018–2022"
+    title = "PERCENT UNDERSERVED BY PENNSYLVANIA COUNTIES",
+    subtitle = "Pennsylvania, US",
+    caption = "Source: American Community Survey (2022)"
   ) +
-  theme_void()
+  
+  # Clean minimal theme with custom styling
+  theme_void() +
+  theme(
+    panel.background = element_rect(fill = "white", color = NA),
+    plot.background = element_rect(fill = "white", color = NA),
+    plot.title = element_text(
+      size = 14, 
+      face = "bold", 
+      hjust = 0.5,
+      margin = margin(b = 5, unit = "pt")
+    ),
+    plot.subtitle = element_text(
+      size = 10, 
+      hjust = 0.5,
+      margin = margin(b = 15, t = 5, unit = "pt")
+    ),
+    legend.title = element_text(
+      size = 11, 
+      face = "bold"
+    ),
+    legend.text = element_text(
+      size = 10,
+    ),
+    plot.caption = element_text(
+      size = 9, 
+      color = "gray40",
+      face = "italic",
+      margin = margin(t = 10, unit = "pt")
+    ),
+    legend.position = "right",
+    legend.box.margin = margin(l = 10, unit = "pt")
+  )
 ```
 
 **Required county-level statistics:**
@@ -445,35 +483,65 @@ county_map_data <- pa_counties_proj %>%
 
 ggplot() +
   # Counties filled by % underserved vulnerable tracts
-  geom_sf(data = county_map_data, aes(fill = pct_underserved_vulnerable), color = "white", size = 0.3) +
+  geom_sf(data = county_map_data, aes(fill = pct_underserved_vulnerable), 
+          color = "white", size = 0.3) +
   
   # Hospital locations as points
-  geom_sf(data = hospitals_proj, color = "red", size = 1, alpha = 0.7) +
+  geom_sf(data = hospitals_proj, aes(color = "Hospitals"), 
+          size = 1, alpha = 0.7, show.legend = "point") +
   
   # Color scale for access challenge
   scale_fill_viridis(
-    name = "% Underserved Vulnerable Tracts",
+    name = "Percent Underserved",
     option = "C",
     direction = -1,
     labels = function(x) paste0(x, "%")
   ) +
   
-  # Map titles and caption
-  labs(
-    title = "Healthcare Access Challenges Across Pennsylvania Counties",
-    subtitle = "Counties shaded by the percentage of vulnerable tracts located more than 15 miles from the nearest hospital",
-    caption = "Data sources: American Community Survey (2022), Pennsylvania Hospital Data, and U.S. Census TIGER/Line Shapefiles"
+  # Hospital point color scale
+  scale_color_manual(
+    name = "",
+    values = c("Hospitals" = "red2")
   ) +
   
-  # Clean minimal theme
+  # Map titles and caption
+  labs(
+    title = "URDERSERVED COUNTIES AND HOSPITAL LOCATION",
+    subtitle = "Pennsylvania, US",
+    caption = "Source: American Community Survey (2022), Pennsylvania Hospital Data"
+  ) +
+  
+  # Clean minimal theme with custom styling
   theme_void() +
   theme(
-    plot.title = element_text(size = 16, face = "bold"),
-    plot.subtitle = element_text(size = 12),
-    legend.title = element_text(size = 11, face = "bold"),
-    legend.text = element_text(size = 10),
-    plot.caption = element_text(size = 9, color = "gray40"),
-    legend.position = "bottom"
+    panel.background = element_rect(fill = "white", color = NA),
+    plot.background = element_rect(fill = "white", color = NA),
+    plot.title = element_text(
+      size = 14, 
+      face = "bold", 
+      hjust = 0.5,
+      margin = margin(b = 5, unit = "pt")
+    ),
+    plot.subtitle = element_text(
+      size = 10, 
+      hjust = 0.5,
+      margin = margin(b = 15, t = 5, unit = "pt")
+    ),
+    legend.title = element_text(
+      size = 11, 
+      face = "bold"
+    ),
+    legend.text = element_text(
+      size = 10,
+    ),
+    plot.caption = element_text(
+      size = 9, 
+      color = "gray40",
+      face = "italic",
+      margin = margin(t = 10, unit = "pt")
+    ),
+    legend.position = "right",
+    legend.box.margin = margin(l = 10, unit = "pt")
   )
 
 ```
@@ -737,6 +805,40 @@ cat("\n--- Summary Statistics ---\n")
 cat("Total parks in Philadelphia:", nrow(parks), "\n")
 cat("Total street trees in Philadelphia:", nrow(trees), "\n")
 
+# 2. Get Philadelphia-specific census tracts and demographics for the analysis
+# 下载费城县的 tract-level 数据 (geometry = TRUE 会包含地理边界)
+philly_tracts <- get_acs(
+  geography = "tract",
+  variables = c(
+    total_pop = "B01003_001",        # 总人口
+    median_income = "B19013_001",    # 家庭收入中位数
+    white = "B02001_002",            # 白人
+    black = "B02001_003",            # 黑人
+    asian = "B02001_005",            # 亚裔
+    hispanic = "B03003_003"          # 西语裔
+  ),
+  state = "PA",
+  county = "Philadelphia",
+  geometry = TRUE,
+  year = 2022,
+  survey = "acs5"
+)
+
+philly_tracts <- philly_tracts %>%
+  select(GEOID, NAME, variable, estimate, geometry) %>%
+  st_as_sf() %>%
+  st_transform(3857) %>%  # 投影到适合空间计算的坐标（如 Web Mercator）
+  pivot_wider(names_from = variable, values_from = estimate) %>%
+  mutate(
+    pct_white = white / total_pop * 100,
+    pct_black = black / total_pop * 100,
+    pct_asian = asian / total_pop * 100,
+    pct_hispanic = hispanic / total_pop * 100,
+    pct_nonwhite = 100 - pct_white
+  )
+
+philly_tracts_proj <- st_transform(philly_tracts, crs = 4326)
+
 ```
 
 **Questions to answer:**
@@ -749,7 +851,7 @@ cat("Total street trees in Philadelphia:", nrow(trees), "\n")
 
 2. **Pose a research question**
 
-Write a clear research statement that your analysis will answer.
+**Do low-income and minority neighborhoods have equitable access to green space?**
 
 **Examples:**
 - "Do vulnerable tracts have adequate public transit access to hospitals?"
@@ -773,16 +875,112 @@ Use at least TWO spatial operations to answer your research question.
 **Your Task:**
 ```{r}
 # Your spatial analysis
+# --- 1. Calculate park and tree accessibility metrics ---
 
+# Compute centroids for each census tract
+tract_centroids <- st_centroid(philly_tracts_proj)
 
+# Calculate distance (in meters) from each tract centroid to the nearest park
+dist_to_park <- st_distance(tract_centroids, parks_proj) %>%
+  apply(1, min)  # min distance for each tract
 
+# Calculate distance to the nearest tree canopy point (proxy for green coverage)
+dist_to_tree <- st_distance(tract_centroids, trees_proj) %>%
+  apply(1, min)
 
+# Add distance variables back to tracts
+philly_tracts_proj <- philly_tracts_proj %>%
+  mutate(
+    dist_to_park_m = as.numeric(dist_to_park),
+    dist_to_tree_m = as.numeric(dist_to_tree),
+    dist_to_park_km = dist_to_park_m / 1000,
+    dist_to_tree_km = dist_to_tree_m / 1000
+  )
 
+# --- 2. Explore correlations between green access and demographics ---
 
+# Examine whether lower-income or higher-nonwhite areas are farther from green space
+cor_test_income <- cor.test(philly_tracts_proj$median_income, philly_tracts_proj$dist_to_park_km, use = "complete.obs")
+cor_test_nonwhite <- cor.test(philly_tracts_proj$pct_nonwhite, philly_tracts_proj$dist_to_park_km, use = "complete.obs")
 
+cat("\n--- Correlation Results ---\n")
+cat("Income vs. Distance to Park (r):", round(cor_test_income$estimate, 3), "\n")
+cat("Pct Nonwhite vs. Distance to Park (r):", round(cor_test_nonwhite$estimate, 3), "\n")
 
+# --- 3. Classify tracts by socioeconomic characteristics ---
 
+income_median <- median(philly_tracts_proj$median_income, na.rm = TRUE)
+nonwhite_median <- median(philly_tracts_proj$pct_nonwhite, na.rm = TRUE)
 
+philly_tracts_proj <- philly_tracts_proj %>%
+  mutate(
+    income_group = if_else(median_income < income_median, "Low Income", "High Income"),
+    race_group = if_else(pct_nonwhite > nonwhite_median, "High Nonwhite", "Low Nonwhite")
+  )
+
+# --- 4. Visualize distance to parks by income and race group ---
+
+# Boxplot comparison
+ggplot(philly_tracts_proj %>% st_drop_geometry(), 
+       aes(x = income_group, y = dist_to_park_km, fill = race_group)) +
+  geom_boxplot(alpha = 0.8, outlier.color = "gray40") +
+  scale_fill_viridis_d(name = "Race Group") +
+  labs(
+    title = "Park Accessibility by Income and Racial Composition",
+    subtitle = "Philadelphia Census Tracts (2022 ACS + OpenDataPhilly)",
+    x = "Income Group",
+    y = "Distance to Nearest Park (km)"
+  ) +
+  theme_minimal(base_size = 13)
+
+# --- 5. Map visualization: spatial distribution of green access ---
+green_access_map <- ggplot(philly_tracts_proj) +
+  # 普查区按到公园距离填充颜色
+  geom_sf(
+    aes(fill = dist_to_park_km),
+    color = "white",
+    linewidth = 0.1
+  ) +
+  # 公园边界
+  geom_sf(
+    data = parks_proj, 
+    fill = "#74c476", 
+    color = "#006d2c", 
+    alpha = 0.7,
+    linewidth = 0.3
+  ) +
+  # 树木位置（抽样显示以避免过度拥挤）
+  geom_sf(
+    data = trees_proj %>% sample_n(min(5000, nrow(trees_proj))),  # 限制显示数量
+    color = "#238b45",
+    size = 0.1,
+    alpha = 0.3
+  ) +
+  # 使用绿色系连续色标
+  scale_fill_gradientn(
+    name = "Distance to Park (km)",
+    colors = c("#f7fcf5", "#e5f5e0", "#c7e9c0", "#a1d99b", "#74c476", "#41ab5d", "#238b45", "#006d2c", "#00441b"),
+    limits = c(0, max(philly_tracts_proj$dist_to_park_km, na.rm = TRUE)),
+    na.value = "grey80"
+  ) +
+  labs(
+    title = "GREEN SPACE ACCESSIBILITY IN PHILADELPHIA",
+    subtitle = "Distance to Nearest Park by Census Tract",
+    caption = "Source: OpenDataPhilly, ACS 2022"
+  ) +
+  theme_void()
+
+# 应用主题样式
+green_access_map + theme(
+  panel.background = element_rect(fill = "white", color = NA),
+  plot.background = element_rect(fill = "white", color = NA),
+  legend.box.margin = margin(l = 10, unit = "pt"),
+  legend.title = element_text(face = "bold", size = 10),
+  legend.text = element_text(size = 8),
+  plot.title = element_text(face = "bold", size = 16, hjust = 0.5),
+  plot.subtitle = element_text(size = 12, hjust = 0.5, margin = margin(b = 15, t = 5, unit = "pt")),
+  plot.caption = element_text(margin = margin(t = 15, unit = "pt"), face = "italic", family = "mono", size = 9)
+)
 ```
 
 **Analysis requirements:**
